Titulo principal concluido

--- a/index.html
+++ b/index.html
@@ -21,5 +21,21 @@
             </nav>
         </div>
     </header>
+    <main>
+        <div class="documentario-principal">
+            <div class="container">
+                <h3 class="titulo">MISS AMERICANA</h3>
+                <p class="descricao">Neste documentário revelador, Taylor Swift assume seu papel de compositora e cantora e de uma mulher que sabe usar todo o poder da sua voz.</p>
+                <div class="botoes">
+                    <button role="button" class = "botao">
+                        ASSISTIR AGORA
+                    </button>
+                    <button role="button" class = "botao">
+                        MAIS INFORMAÇÕES
+                    </button>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
