Titulo principal com font-awsome

--- a/index.html
+++ b/index.html
@@ -28,14 +28,17 @@
                 <p class="descricao">Neste documentário revelador, Taylor Swift assume seu papel de compositora e cantora e de uma mulher que sabe usar todo o poder da sua voz.</p>
                 <div class="botoes">
                     <button role="button" class = "botao">
+                        <i class="fa-solid fa-play"></i>
                         ASSISTIR AGORA
                     </button>
                     <button role="button" class = "botao">
+                        <i class="fa-solid fa-circle-info"></i>
                         MAIS INFORMAÇÕES
                     </button>
                 </div>
             </div>
         </div>
     </main>
+    <script src="https://kit.fontawesome.com/f6023ff91d.js" crossorigin="anonymous"></script>
 </body>
 </html>
