--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/main.css">
+    <link rel="stylesheet" href="style/owl/owl.carousel.min.css">
+    <link rel="stylesheet" href="style/owl/owl.theme.default.min.css">
     <title>TAYLORFLIX</title>
 </head>
 <body>
@@ -39,6 +41,36 @@
             </div>
         </div>
     </main>
+    <div class="carrossel-filmes">
+        <div class="owl-carousel owl-theme">
+            <div class="item">
+                <img class="box-filme" src="img/0uYCmXf.jpg" alt="" srcset="">
+            </div>
+            <div class="item">
+                <img class="box-filme" src="img/121213-thaylor-swift.jpg" alt="" srcset="">
+            </div>
+
+            <div class="item">
+                <img class="box-filme" src="img/1472033_572011206204366_1251186923_n.jpg" alt="" srcset="">
+            </div>
+
+            <div class="item">
+                <img class="box-filme" src="img/20191006202211.jpg" alt="" srcset="">
+            </div>
+
+            <div class="item">
+                <img class="box-filme" src="img/3437428988_efb401a079_z.jpg" alt="" srcset="">
+            </div>
+
+            <div class="item">
+                <img class="box-filme" src="img/35.jpg" alt="" srcset="">
+            </div>
+        </div>
+    </div>
     <script src="https://kit.fontawesome.com/f6023ff91d.js" crossorigin="anonymous"></script>
+    <script src="js/owl/jquery.min.js"></script>
+    <script src="js/owl/owl.carousel.min.js"></script>
+    <script src="js/owl/setup.js"></script>
+
 </body>
 </html>
